--- a/MyPark/MyPark.csproj
+++ b/MyPark/MyPark.csproj
@@ -136,6 +136,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Admin\TipoVeiculo.cshtml" />
+    <Content Include="Views\Admin\AddTipoVeiculo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
