--- a/MyPark/MyPark.csproj
+++ b/MyPark/MyPark.csproj
@@ -103,6 +103,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Images\load.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -138,7 +139,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Admin\TipoVeiculo.cshtml" />
-    <Content Include="Views\Admin\AddTipoVeiculo.cshtml" />
+    <Content Include="Views\Admin\_AddTipoVeiculo.cshtml" />
+    <Content Include="Views\Admin\_TabelaTipoVeiculo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
